--- a/src/html/inc/client-menu.html
+++ b/src/html/inc/client-menu.html
@@ -2,43 +2,51 @@
     <div class="page-content">
         <div class="page-item" id="contributions">
             <a class="page-link" href="contributions.html">
-                <img class="page__more current__item" src="../assets/img/svg/contributions.svg" alt="" width="32px"
-                    height="32px">
-                <!-- <svg class="page__more current__item" viewBox="0 0 32 32">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-contributions" />
-                </svg> -->
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/contributions.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Вклады и счета</p>
             </a>
         </div>
         <div class="page-item" id="cards">
             <a class="page-link" href="cards.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-cards" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/cards.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Карты</p>
             </a>
         </div>
         <div class="page-item" id="online-bank">
             <a class="page-link" href="online-bank.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-online-bank" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/online-bank.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Онлайн-банк</p>
             </a>
         </div>
         <div class="page-item" id="coins">
             <a class="page-link" href="coins.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-moneds" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/moneds.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Монеты <br>Обмен валюты</p>
             </a>
         </div>
         <div class="page-item" id="individual">
             <a class="page-link" href="safeboxes.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-individual" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/individual.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Индивидуальные банковские ячейки</p>
             </a>
         </div>
