--- a/src/html/inc/corporate-menu.html
+++ b/src/html/inc/corporate-menu.html
@@ -2,33 +2,41 @@
     <div class="page-content">
         <div class="page-item" id="bank">
             <a class="page-link" href="accountopen.html">
-                <svg class="page__more current__item" viewBox="0 0 32 32">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-bank" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/bank.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Банковское обслуживание</p>
             </a>
         </div>
         <div class="page-item" id="deposits">
             <a class="page-link" href="deposits.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-deposite" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/deposite.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Депозиты</p>
             </a>
         </div>
-        <div class="page-item" id="credit">
+        <div class="page-item" id="credits">
             <a class="page-link" href="credits.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-credite" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/credite.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Кредитование</p>
             </a>
         </div>
         <div class="page-item" id="garanty">
             <a class="page-link" href="garanty.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-garanties" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/garanties.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Аккредитивы и гарантии</p>
             </a>
         </div>
