--- a/src/html/inc/private-menu.html
+++ b/src/html/inc/private-menu.html
@@ -3,56 +3,60 @@
         <div class="page-item" id="rko">
             <a class="page-link link" href="rko.html">
                 <div class="link-img__wrapper">
-                    <div class="link-img__circle">
-                        <img src="../assets/img/icons/ellipse.png" alt="">
-                        <div class="link-img__icon">
-                            <img src="../assets/img/icons/transactions.svg" alt="">
-                        </div>
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/transactions.svg" alt="">
                     </div>
                 </div>
-                <!-- <svg class="page__more current__item" viewBox="0 0 32 32">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-transactions" />
-                </svg> -->
                 <p class="page__text current__text">Расчеты</p>
             </a>
         </div>
         <div class="page-item" id="vip-deposits">
             <a class="page-link" href="vip-deposits.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-pr-deposite">
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/pr-deposite.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Депозиты</p>
             </a>
         </div>
         <div class="page-item" id="investments">
             <a class="page-link" href="investments.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-investments" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/investments.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Инвестиции</p>
             </a>
         </div>
         <div class="page-item" id="credit-private">
             <a class="page-link" href="credit-private.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-pr-credits" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/pr-credits.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Кредиты</p>
             </a>
         </div>
         <div class="page-item" id="consulting">
             <a class="page-link" href="consulting.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-consulting" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/consulting.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Консультирование</p>
             </a>
         </div>
         <div class="page-item" id="lifestyle">
             <a class="page-link" href="lifestyle.html">
-                <svg class="page__more">
-                    <use class="page__icon" href="../assets/img/svg/sprite/symbol-defs.svg#icon-transactions" />
-                </svg>
+                <div class="link-img__wrapper">
+                    <div class="link-img__circle ibg">
+                        <img src="../assets/img/svg/lifestyle.svg" alt="">
+                    </div>
+                </div>
                 <p class="page__text current__text">Lifestyle</p>
             </a>
         </div>
