--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,240 +1,11 @@
 <%- include('inc/header.html') %>
-<%- include('inc/corporate-menu.html') %>
-<div id="info" data-current-id="bank" data-main-menu-current-id="corporative-head"></div>
-
-    <!-- Main content-->
-
     <section class="container">
-        <div class="second__header-operations">
-            <div class="second__text-credits__list">
-                <a class="second__text-credits" href="#">Главная /</a>
-                <a class="second__text-credits" href="./accountopen.html">Корпоративным клиентам /</a>
-                <a class="second__text-credits" href="./accountopen.html">Банковское обслуживание /</a>
-                <a class="second__text-credits current-second__text-credits" href="./accountopen.html">Открытие
-                    расчетного счета</a>
-            </div>
-        </div>
-        <div class="operations">
-            <div class="dropdown">
-                <button class="dropbtn">
-                    <p class="dropbtn-text">Открытие расчетного счета</p>
-                    <img class="dropdown__picture" src="../assets/img/icons/arrow1.png" alt="arrow" class="operations__picture"
-                        width="20px" height="20px">
-                </button>
-                <div id="myDropdown" class="dropdown-content">
-                    <ul class="operations__list__mobile">
-                        <li class="operations__list-item__mobile">
-                            <a href="./accountopen.html" class="operations__link__mobile">Открытие расчетного счета</a>
-                        </li>
-                        <li class="operations__list-item__mobile">
-                            <a href="./ved.html" class="operations__link__mobile">ВЭД</a>
-                        </li>
-                        <li class="operations__list-item__mobile">
-                            <a href="./specialchecks.html" class="operations__link__mobile">Специальные счета</a>
-                        </li>
-                        <li class="operations__list-item__mobile">
-                            <a href="./distance-services.html" class="operations__link__mobile">Дистанционные
-                                сервисы</a>
-                        </li>
-                        <li class="operations__list-item__mobile ">
-                            <a href="./operations.html" class="operations__link__mobile">Операции с ценными бумагами</a>
-                        </li>
-                        <li class="operations__list-item__mobile">
-                            <a href="./tarif.html" class="operations__link__mobile">Тарифы</a>
-                        </li>
-                        <li class="operations__list-item__mobile">
-                            <a href="" class="operations__link__mobile">Документы</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="operations__item">
-                <ul class="operations__list">
-                    <li class="operations__list-item current-operations__list-item">
-                        <a href="./accountopen.html" class="operations__link current-operations__link">Открытие
-                            расчетного счета</a>
-                        <img src="../assets/img/images/arrow.png" alt="arrow" class="operations__picture" width="20px"
-                            height="20px">
-                    </li>
-                    <li class="operations__list-item">
-                        <a href="./ved.html" class="operations__link">ВЭД</a>
-                    </li>
-                    <li class="operations__list-item">
-                        <a href="./specialchecks.html" class="operations__link">Специальные счета</a>
-                    </li>
-                    <li class="operations__list-item">
-                        <a href="./distance-services.html" class="operations__link">Дистанционные сервисы</a>
-                    </li>
-                    <li class="operations__list-item">
-                        <a href="./operations.html" class="operations__link">Операции с ценными бумагами</a>
-                    </li>
-                    <li class="operations__list-item">
-                        <a href="./tarif.html" class="operations__link">Тарифы</a>
-                    </li>
-                    <li class="operations__list-item">
-                        <a href="" class="operations__link">Документы</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="operations__item">
-                <div class="operations__kind">
-                    <div class="operations__kind-item">
-                        <h5 class="operations__kind-title">
-                            Анкета на открытие счета
-                        </h5>
-                        <div class="accoutopen__checklist">
-                            <input type="text" class="accountopen__text" placeholder="Наименование организации" />
-                            <div class="accountopen__item-list">
-                                <div class="accountopen__check-item">
-                                    <input type="text" class="accountopen__text" placeholder="ИНН" />
-                                    <input type="text" class="accountopen__text" placeholder="Контактное лицо " />
-                                </div>
-                                <div class="accountopen__check-item">
-                                    <input type="text" class="accountopen__text" placeholder="Электронная почта" />
-                                    <input type="text" class="accountopen__text" placeholder="Контактный телефон" />
-                                </div>
-                            </div>
+        <div class="general">
 
-                        </div>
-                        <div class="principal">
-                            <div class="accountopen__conditions">
-                                <input type="checkbox" class="accountopen__check" name="check" id="conditions" />
-                                <label class="accountopen__check-text" for="conditions">
-                                    Я согласен с <a href="">условиями</a> использования<br>
-                                    банком моих персональных данных для<br>
-                                    обработки данного обращения
-                                </label>
-                            </div>
-                            <button class="operations__btn">
-                                Открыть счет
-                            </button>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="operations__documentation">
-                    <div class="operations__documentation-nav">
-                        <div type="menu__toggle" id="operations__docs" class="operations__docs">
-                            <div>
-                                <h3 class="operations__documentation-title">
-                                    Перечень документов для открытия счета
-                                </h3>
-                                <div class="operations__documentation-Link__list">
-                                    <a href="#" class="operations__documentation-link" id="resident">Резиденту</a>
-                                    <a href="#" class="operations__documentation-link" id="noresident">Нерезиденту</a>
-                                    <a href="#" class="operations__documentation-link" id="up">ИП</a>
-                                    <a href="#" class="operations__documentation-link current-link"
-                                        id="custom">Общие</a>
-                                </div>
-                            </div>
-                            <div class="operations__documentation-list">
-                                <div class="operations__documentation-kind" id="resident-item">
-                                    <div class="operations__documentation-file">
-                                        <img src="../assets/img/images/pdf.png" alt="pdf" width="24px" height="30px">
-                                        <div class="operations__documentation-content">
-                                            <H5 class="operations__documentation-description">
-                                                Общие условия комплексного банковского обслуживания
-                                            </H5>
-                                            <p class="operations__documentation-caracter">
-                                                PDF, 279 КБ / 04 июня 2018
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="operations__documentation-file hide" data-show="no">
-                                        <img src="../assets/img/images/word.png" alt="pdf" width="24px" height="30px">
-                                        <div class="operations__documentation-content">
-                                            <H5 class="operations__documentation-description">
-                                                Перечень документов для заключения договора банковского обслуживания 
-                                            </H5>
-                                            <p class="operations__documentation-caracter">
-                                                PDF, 279 КБ / 04 июня 2018
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="operations__documentation-kind" id="noresident-item">
-                                    <div class="operations__documentation-file">
-                                        <img src="../assets/img/images/word.png" alt="pdf" width="24px" height="30px">
-                                        <div class="operations__documentation-content">
-                                            <H5 class="operations__documentation-description">
-                                                Форма Подтверждения о присоединении 
-                                            </H5>
-                                            <p class="operations__documentation-caracter">
-                                                PDF, 279 КБ / 04 июня 2018
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="operations__documentation-kind" id="up-item">
-                                    <div class="operations__documentation-file">
-                                        <img src="../assets/img/images/pdf.png" alt="pdf" width="24px" height="30px">
-                                        <div class="operations__documentation-content">
-                                            <H5 class="operations__documentation-description">
-                                                Общие условия комплексного банковского обслуживания
-                                            </H5>
-                                            <p class="operations__documentation-caracter">
-                                                PDF, 279 КБ / 04 июня 2018
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="operations__documentation-file hide" data-show="no">
-                                        <img src="../assets/img/images/word.png" alt="pdf" width="24px" height="30px">
-                                        <div class="operations__documentation-content">
-                                            <H5 class="operations__documentation-description">
-                                                Перечень документов для заключения договора банковского обслуживания 
-                                            </H5>
-                                            <p class="operations__documentation-caracter">
-                                                PDF, 279 КБ / 04 июня 2018
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="operations__documentation-kind active" id="custom-item">
-                                    <div class="operations__documentation-file">
-                                        <img src="../assets/img/images/word.png" alt="pdf" width="24px" height="30px">
-                                        <div class="operations__documentation-content">
-                                            <H5 class="operations__documentation-description">
-                                                Форма Подтверждения о присоединении 
-                                            </H5>
-                                            <p class="operations__documentation-caracter">
-                                                PDF, 279 КБ / 04 июня 2018
-                                            </p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="documentation__more more" type="button" id="showmore">
-                        Смотреть все
-                        <svg class="more-picture">
-                            <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-more" />
-                        </svg>
-                    </button>
-                </div>
-                <div class="rates operations__rates">
-                    <div class="rates__link-item">
-                        <a class="rates__link" href="#">
-                            Тарифы на РКО
-                        </a>
-                        <svg class="rates__svg">
-                            <use href="../assets/img/svg/sprite/symbol-defs.svg#icon-next" />
-                        </svg>
-                    </div>
-                    <div class="rates__item-contacts">
-                        <div class="rates__contacts">
-                            <h5 class="rates__title">Контакты:</h5>
-                            <p class="rates__text">
-                                s.pigolkina@mfk-bank.ru<br>
-                                +7 495 287-02-60
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
-<%- include('inc/footer.html') %>
-</body>
 
-</html>
+    <%- include('inc/footer.html') %>
+        </body>
+
+        </html>
