--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,90 @@
 <%- include('inc/header.html') %>
     <section class="container">
         <div class="general">
-
+            <div class="general-description">
+                <div class="general-title">
+                    <h1></h1>
+                </div>
+                <div class="general-btn">
+                    <button class="btn">Узнать больше</button>
+                </div>
+            </div>
+            <div class="general-info">
+                <div class="info-card__wrapper">
+                    <div class="info-card__title">
+                        <h3>Мы работаем 24/7</h3>
+                    </div>
+                    <div class="info-card__text">
+                        <p>Наши специалисты помогут в любое врямя</p>
+                    </div>
+                </div>
+                <div class="info-card__wrapper">
+                    <div class="info-card__title">
+                        <h3>12 лет вместе</h3>
+                    </div>
+                    <div class="info-card__text">
+                        <p>Мы работаем чтобы ваша жизнь была лучше</p>
+                    </div>
+                </div>
+                <div class="info-card__wrapper">
+                    <div class="info-card__title">
+                        <h3>Для Вашей семьи</h3>
+                    </div>
+                    <div class="info-card__text">
+                        <p>Мы работаем чтобы ваша жизнь была лучше</p>
+                    </div>
+                </div>
+                <div class="info-card__wrapper">
+                    <div class="info-card__title">
+                        <h3>Для бизнеса</h3>
+                    </div>
+                    <div class="info-card__text">
+                        <p>Мы работаем чтобы ваша жизнь была лучше</p>
+                    </div>
+                </div>
+            </div>
+            <div class="general-about">
+                <div class="about-card__wrapper">
+                    <h2 class="about-card__title">
+                        Ипотечное кредитование
+                    </h2>
+                    <h3 class="about-card__posttitle">
+                        Решение квартирного вопроса
+                    </h3>
+                    <p class="about-card__text">
+                        Размер кредита
+                    </p>
+                    <h2 class="about-card__title">
+                        до 7 000 000 рублей
+                    </h2>
+                    <p class="about-card__text">
+                        Годовая ставка
+                    </p>
+                    <h2 class="about-card__title">
+                        от 8,9%
+                    </h2>
+                    <button class="btn">Подробнее</button>
+                    <img src="../assets/img/images/house.jpg" alt="house">
+                </div>
+                <div class="about-card__wrapper">
+                    <h2 class="about-card__title">
+                        О банке МФК
+                    </h2>
+                    <p class="about-card__text">
+                        АО АКБ «МЕЖДУНАРОДНЫЙ ФИНАНСОВЫЙ КЛУБ» (Банк МФК) предоставляет полный спектр финансовых услуг
+                        крупным корпоративным
+                        и частным состоятельным клиентам.
+                        Банк осуществляет свою деятельность на основании генеральной лицензии № 2618, выданной Банком
+                        России 29 февраля 2016
+                        года. Акционеры банка — Игнатова Е. С., Орлова Т. Д, Прохоров М. Д., Onexim Holdings Limited.
+                    </p>
+                    <p class="about-card__text">
+                        Банк МФК входит в систему обязательного страхования вкладов, участник Национальной финансовой
+                        ассоциации и ПАО
+                        Московская Биржа. Банк МФК является членом Ассоциации российских банков (АРБ).
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
