add general page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,14 +1,20 @@
 <%- include('inc/header.html') %>
-    <section class="container">
-        <div class="general">
+    <div class="background ibg ibg--cover">
+        <section class="container">
             <div class="general-description">
                 <div class="general-title">
-                    <h1></h1>
+                    <h2>Запуск нового продукта
+                        для физических лиц: накопительный счет «МФК Сберегательный»</h2>
                 </div>
                 <div class="general-btn">
                     <button class="btn">Узнать больше</button>
                 </div>
             </div>
+        </section>
+        <img src="../assets/img/images/general.jpg" alt="">
+    </div>
+    <section class="container">
+        <div class="general">
             <div class="general-info">
                 <div class="info-card__wrapper">
                     <div class="info-card__title">
