Centered vip deposits card content on mobile

--- a/src/html/deposits.html
+++ b/src/html/deposits.html
@@ -54,22 +54,30 @@
 					{
 						"breakpoints":[
 							{
-								"steps": 5,
+								"steps": 15,
+								"multiplier": 1
+							},
+							{
+								"steps": 3,
 								"multiplier": 5
 							},
 							{
-								"steps": 11,
+								"steps": 2,
+								"multiplier": 15
+							},
+							{
+								"steps": 10,
 								"multiplier": 30
 							},
 							{
 								"steps": 10,
-								"multiplier": 360
+								"multiplier": 180
 							}
 						]
 					}'>
-						<span>На срок в</span> 
+						<span>Срок: </span> 
 						<span class="filter-label text--700 text--M text--dark-gray">1</span>
-						<input id="days-range" type="range" class="filter-trigger m--t-10" name="days" min="1" max="31" value="1" step="1">
+						<input id="days-range" type="range" class="filter-trigger m--t-10" name="days" min="1" max="70" value="1" step="1">
 					</div>
 					<div class="md-fx-el--50 md-fx-od--3 fx fx-jc--c xsm-fx-el--100">
 						<button class="btn btn-filter filter-apply-button  p--10 xsm-fx-el--100">
