--- a/src/html/vip-deposits.html
+++ b/src/html/vip-deposits.html
@@ -97,7 +97,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="deposits-card">
+						<div class="deposits-card deposits-card--center">
 							<div class="card__wrapper">
 								<div class="card__title ">
 									<h3>Расходный вклад — VIP</h3>
@@ -178,7 +178,7 @@
 							</div>
 
 						</div>
-						<div class="deposits-card">
+						<div class="deposits-card deposits-card--center">
 							<div class="card__wrapper">
 								<div class="card__title ">
 									<h3>Срочный вклад с дополнительными взносами — VIP</h3>
@@ -268,7 +268,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="deposits-card">
+						<div class="deposits-card deposits-card--center">
 							<div class="card__wrapper">
 								<div class="card__title ">
 									<h3>Валютный вклад — VIP</h3>
@@ -324,7 +324,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="deposits-card">
+						<div class="deposits-card deposits-card--center">
 							<div class="card__wrapper">
 								<div class="card__title ">
 									<h3>Мультивалютный вклад — VIP</h3>
@@ -404,7 +404,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="deposits-card">
+						<div class="deposits-card deposits-card--center">
 							<div class="card__wrapper">
 								<div class="card__title ">
 									<h3>Срочный вклад — VIP</h3>
@@ -501,7 +501,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="deposits-card">
+						<div class="deposits-card deposits-card--center">
 							<div class="card__wrapper">
 								<div class="card__title ">
 									<h3>Детский с дополнительными взносами — VIP</h3>
@@ -561,7 +561,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="deposits-card">
+						<!-- <div class="deposits-card deposits-card--center">
 							<div class="card__wrapper">
 								<div class="card__title ">
 									<h3>Вклад «До востребования»</h3>
@@ -606,7 +606,7 @@
 									<button class="btn btn--fullwidth">Открыть депозит</button>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
