Fixed links and added a private banking safeboxes-vip page

--- a/src/html/brokers.html
+++ b/src/html/brokers.html
@@ -20,7 +20,7 @@
                         <div class="sidebar__items">
                             <div class="sidebar__item ">
                                 <div class="sidebar__item-text">
-                                    <a href="rko.html">Операции с драгоценными металлами </a>
+                                    <a href="investments.html">Операции с драгоценными металлами </a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
                             </div>
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="sidebar__item-icon"></div>
                             </div>
-                            <div class="sidebar__item">
+                           <!--  <div class="sidebar__item">
                                 <div class="sidebar__item-text">
                                     <a href="">Структурированные продукты</a>
                                 </div>
@@ -47,7 +47,7 @@
                                     <a href="">Депозитарное обслуживание</a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="page__content basic-page">
