--- a/src/html/rko.html
+++ b/src/html/rko.html
@@ -26,7 +26,7 @@
                             </div>
                             <div class="sidebar__item">
                                 <div class="sidebar__item-text">
-                                    <a href="">Ячейки</a>
+                                    <a href="safeboxes-vip.html">Ячейки</a>
                                 </div>
                                 <div class="sidebar__item-icon"></div>
                             </div>
