--- a/src/html/premiumcards.html
+++ b/src/html/premiumcards.html
@@ -131,7 +131,7 @@
                                     <div class="card-list__card__button-wrapper premium-card__button-wrap">
                                         <button class="card-list__card__button btn">Получить консультацию</button>
                                         <a class="card-list__card__button btn btn--transparent"
-                                            href="single-card.html">Подробнее о вкладе</a>
+                                            href="">Подробнее о вкладе</a> 
                                     </div>
                                 </div>
                             </div>
@@ -216,7 +216,7 @@
                                     <div class="card-list__card__button-wrapper premium-card__button-wrap">
                                         <button class="card-list__card__button btn">Получить консультацию</button>
                                         <a class="card-list__card__button btn btn--transparent"
-                                            href="single-card.html">Подробнее о вкладе</a>
+                                            href="">Подробнее о вкладе</a> 
                                     </div>
                                 </div>
                             </div>
@@ -300,7 +300,7 @@
                                 </div>
                                 <div class="card-list__card__button-wrapper">
                                     <button class="card-list__card__button btn">Получить консультацию</button>
-                                    <a class="card-list__card__button btn btn--transparent" href="single-card.html">Подробнее о вкладе</a>
+                                    <a class="card-list__card__button btn btn--transparent" href="">Подробнее о вкладе</a> 
                                 </div>
                             </div>
                         </div>
@@ -383,7 +383,7 @@
                                 </div>
                                 <div class="card-list__card__button-wrapper">
                                     <button class="card-list__card__button btn">Получить консультацию</button>
-                                    <a class="card-list__card__button btn btn--transparent" href="single-card.html">Подробнее о вкладе</a>
+                                    <a class="card-list__card__button btn btn--transparent" href="">Подробнее о вкладе</a> 
                                 </div>
                             </div>
                         </div> -->
