--- a/src/html/vip-deposits.html
+++ b/src/html/vip-deposits.html
@@ -85,7 +85,7 @@
 										}
 									]
 								}'>
-									<span>На срок в</span>
+									<span>Срок:</span>
 									<span class="filter-label text--700 text--M text--dark-gray">1</span>
 									<input id="days-range" type="range" class="filter-trigger m--t-10" name="days"
 										min="1" max="31" value="1" step="1">
